# analysis_sensitivity

./: .gitignore  README.md  construct_model.py  convert_sedata_model.py  cube60.jnii  cube60_detp.jdat  input.json  input.xlsx  input_A.xlsx  input_A_1.67.xlsx  input_B.xlsx  input_change_0.xlsx  input_change_1.xlsx  input_change_2.xlsx  input_optical_properties_1225_A_[0.037 2.7   0.027 2.   ].xlsx  input_position_20241218_A_1.67.xlsx  irrad_memo.md  mcx_core.cu  opt_prop_memo.md  pyproject.toml  rt_structure.py  set_degrees.py  sobol_analysis_results_10.xlsx  sobol_analysis_results_5.xlsx  testtt.py
mcx_buildfiles/: Makefile
src/: 1227_main_analysis.py  analysis_res.py  analysis_res_sobol.py  analysis_sensitivity.py  analysis_sobol_res.ipynb  calc_dvh.py  change_file_name.py  check_res.py  check_res_res.py  check_results.ipynb  cylinder.py  main_analysis.py  main_analysis_degrees.py  main_analysis_one_val.py  main_analysis_position.py  mcx_test.py  num.py  plot_cylinder.py  plot_dvh_distribution.ipynb  position_slider.py  rotate_fiber.py  run_mcx.py  send_mail.py  sobol.py  sobol_module.py  test.ipynb  test.py  test_analysis.py
src/inputs/: default_value.json  input.json  input_cut.json  settings.json
