[project]
name = "analysis_sensitivity"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "raise0915", email = "63898148+raise0915@users.noreply.github.com" }
]
dependencies = [
    "matplotlib>=3.10.0",
    "pydicom",
    "scikit-learn",
    "plotly",
    "ruff",
    "pandas",
    "jinja2",
    "mlab>=1.1.4",
    "traitsui>=8.0.0",
    "configobj>=5.0.9",
    "jupyter>=1.1.1",
    "nibabel>=5.3.2",
    "dicom2nifti",
    "scikit-image",
    "simpleitk>=2.4.0",
    "rt-utils>=1.2.7",
    "pexpect>=4.9.0",
    "salib>=1.5.1",
    "openpyxl>=3.1.5",
    "icecream>=2.1.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "vtk>=9.4.1",
    "pip>=24.3.1",
    "setuptools>=75.6.0",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "pyqt5>=5.15.11",
    "mayavi==4.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "mcx_simulation:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcx_simulation"]

[tool.ruff]
target-version = "py311"

line-length = 120
